use styler instead of formatR

--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,7 @@ description: "A Tufte-Style bookdown template."
 ```{r setup, include=FALSE}
 library(tufte)
 # tufte版本变化之后更新knitr缓存
-knitr::opts_chunk$set(tidy = FALSE, cache.extra = packageVersion('tufte'))
+knitr::opts_chunk$set(tidy = 'styler', cache.extra = packageVersion('tufte'))
 options(htmltools.dir.version = FALSE)
 ```
 
