--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -33,5 +33,8 @@
 % 背景保护色
 \usepackage{xcolor}
 \pagecolor[rgb]{0.9, 0.99, 0.9}
+% 提供 shaded 环境
+\usepackage{framed}
+\definecolor{shadecolor}{RGB}{248,248,248}
 
 \frontmatter
